gitops/apps/pomerium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pomerium
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    app.kubernetes.io/name: pomerium
    app.kubernetes.io/part-of: platform-gitops
